--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "firebase": "^12.1.0",
+    "gsap": "^3.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "motion": "^12.23.12",
