--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
+    "clsx": "^2.1.1",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.9",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "sort-by": "^1.2.0",
-    "tailwindcss": "^4.1.11"
+    "sweetalert2": "^11.22.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
